--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <div class="row">
         <div class="col">
           <label for="balDisplay">Balance:</label>
-          <input type="number" id="balanceDisplay" name="balDisplay" class="form-control">
+          <input type="number" id="balanceDisplay" name="balDisplay" class="form-control" value="100">
         </div>
       </div>
     </div>
